# vanehub-ai

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  coverage-policy.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.docs.config.ts  tailwind.config.ts  vite.config.ts
src-tauri/: ARCHITECTURE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/icons/source/: icon-manifest.json
src-tauri/src/: cli_parameters.rs  command_safety.rs  contract_tests.rs  desktop_lifecycle.rs  floating_assistant.rs  lib.rs  logging.rs  main.rs  migration_fixture_tests.rs  native_lifecycle_tests.rs  network_proxy.rs  prompt_hooks.rs  remote_terminal_migration_tests.rs  session_configuration.rs  session_tabs.rs  shell.rs  test_support.rs  usage.rs
src-tauri/src/bootstrap/: agent_runtime.rs  cli.rs  cli_parameters.rs  communications.rs  desktop.rs  execution_observability.rs  extensions.rs  managed_mcp_relay.rs  mcp.rs  mod.rs  operations.rs  plugin_integrations.rs  prompt_hooks.rs  runtime.rs  scheduled_tasks.rs  sdk.rs  sessions.rs  skills.rs  ssh_connections.rs  workspaces.rs
src-tauri/src/commands/: error.rs  mod.rs  registry.rs
src-tauri/src/commands/agent_runtime/: check_browser_readiness.rs  dto.rs  get_agent_by_id.rs  get_session_details.rs  get_workflow_state.rs  launch_active_workflow.rs  list_agents.rs  mapper.rs  mod.rs  open_agent_terminal.rs  resize_agent_terminal.rs  select_agent.rs  send_agent_terminal_input.rs  send_message.rs  stop_agent_terminal.rs  stop_generation.rs
src-tauri/src/commands/communications/: begin_wechat_authorization.rs  cancel_wechat_authorization.rs  clear_im_connector.rs  dto.rs  get_im_routing.rs  list_im_connectors.rs  mapper.rs  mod.rs  poll_wechat_authorization.rs  reset_im_bindings.rs  restart_im_connector.rs  save_im_connector.rs  save_im_routing.rs  set_im_connector_enabled.rs  test_im_connector.rs  tests.rs
src-tauri/src/commands/desktop/: dto.rs  exit_application.rs  get_automatic_archival_settings.rs  get_data_management_info.rs  get_floating_assistant_config.rs  (+24 more)
src-tauri/src/contexts/: mod.rs
src-tauri/src/extensions/: commands.rs  models.rs  service.rs
src-tauri/src/im/: commands.rs  credentials.rs  mod.rs  models.rs  protocol.rs  runtime.rs  storage.rs
src-tauri/src/mcp/: commands.rs  connection.rs  mod.rs  models.rs  service.rs
src-tauri/src/platform/: clock.rs  error.rs  ids.rs  logging.rs  mod.rs
src-tauri/src/plugin_integrations/: commands.rs  models.rs  service.rs
src-tauri/src/sdk/: commands.rs  models.rs  service.rs
src-tauri/src/skills/: commands.rs  models.rs  service.rs
src-tauri/src/tasks/: commands.rs  models.rs  registry.rs
src-tauri/tests/: architecture.rs
src-tauri/tests/fixtures/: mcp_http_server.cjs  mcp_stdio_server.cjs
(+1642 files in other folders)
