[package]
name = "vanehub-ai"
version = "0.1.0"
description = "Unified AI coding agent management"
authors = ["vanehub-ai"]
edition = "2021"

[lib]
name = "vanehub_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "2.2.0", default-features = false, features = ["client", "transport-child-process", "client-side-sse", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
http = "1"
tauri-plugin-dialog = "2"
reqwest = { version = "0.13", features = ["json", "socks"] }
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
keyring = "4.1.5"
prost = "0.14"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
rand = "0.10"
sha2 = "0.10"
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.26"
url = "2"
webpki-roots = "1"
zeroize = "1"
portable-pty = "0.9.0"

[dev-dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "3", features = ["full", "visit"] }
